--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,28 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.stickyheaderlsitview"
-    android:versionCode="1"
-    android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="21" />
-
-    <application
-        android:allowBackup="true"
+<?xml version="1.0" encoding="UTF-8"?>
+<manifest android:versionCode="1" android:versionName="1.0"
+    package="com.example.stickyheaderlsitview" xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21"/>
+    <application android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar" >
-        <activity
-            android:name="com.example.activity.MainActivity"
-            android:label="@string/app_name" >
+        android:label="@string/app_name" android:theme="@android:style/Theme.Light.NoTitleBar">
+        <activity android:label="@string/app_name" android:name="com.example.activity.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.example.activity.MoreActivity"/>
+        <activity android:name="com.example.activity.AddressActivity"/>
+        <!--created by ADT ext plugin at 2016-12-07 11:55:11-->
+        <activity android:name="com.example.activity.ContactActivity"/>
     </application>
+    
+    
+   <!--  短信相关权限 --> 
+<!--  发送消息-->
+<uses-permission android:name="android.permission.SEND_SMS"/>
+<!--  阅读消息-->
+<uses-permission android:name="android.permission.READ_SMS"/>
+<!--  写入消息-->
+<uses-permission android:name="android.permission.WRITE_SMS" />
+<!-- 接收消息 -->
+<uses-permission android:name="android.permission.RECEIVE_SMS" />
+    
+    <!-- 读取联系人权限 -->   
+<uses-permission android:name="android.permission.READ_CONTACTS"/>  
+<!-- 拨打电话权限 -->  
+<uses-permission android:name="android.permission.CALL_PHONE"/>  
+    
+    
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
