--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <!--created by ADT ext plugin at 2017-02-13 14:32:22-->
         <activity android:name="com.example.activity.GestureSetAndVerifyActivity"/>
         <activity android:name="com.example.activity.GestureActivity"/>
-        
+        <!--created by ADT ext plugin at 2017-03-14 15:55:29-->
+        <activity android:name="com.example.activity.ChatActivity"/>
     </application>
     <!--  短信相关权限 -->
     <!--  发送消息-->
@@ -61,4 +62,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    
+        <uses-permission android:name="android.permission.RECORD_AUDIO" />
 </manifest>
